プロフィール表示

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/layout.tsx",
+    "src/components/Layout.bk",
+    "src/app/_document.bk",
+    "src/app/_app.bk"
+  ],
   "exclude": ["node_modules"]
 }
