--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL="https://nextjs-sns-app-api-wnvl.onrender.com/api"
+NEXT_PUBLIC_API_FOR_LOCAL="http://localhost:5000/api"
+ENVIROMENT="DEVELOPMENT"
