--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
