--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.50.3",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "supabase": "^2.30.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
