--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@supabase/supabase-js": "^2.50.3",
+    "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "next": "14.2.7",
@@ -21,6 +21,9 @@
     "supabase": "^2.30.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -29,7 +32,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^30.0.4",
+    "dotenv": "^17.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "identity-obj-proxy": "^3.0.0",
@@ -39,6 +45,7 @@
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
