--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "baseUrl": ".",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,10 +13,9 @@
     "isolatedModules": true,
     // "jsx": "preserve",
     "jsx": "preserve",
-    "types": [
-      "jest",
-      "@testing-library/jest-dom"
-    ], // ✅ ★追加
+    "types": ["jest", "@testing-library/jest-dom"], // ✅ ★追加
+    "jsx": "preserve",
+    "types": ["jest", "@testing-library/jest-dom"], // ✅ ★追加
     "incremental": true,
     "plugins": [
       {
@@ -27,9 +23,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["src/*"]
     }
   },
   "include": [
@@ -43,7 +37,5 @@
     "src/app/_app.bk",
     "jest.setup.ts" // ✅ ★追加（setupファイルがあるなら）
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
