--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "copy /Y .babel.config.js.jest babel.config.js && jest && del babel.config.js"
+    "test": "yarn jest"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
