--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,8 +15,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     // "jsx": "preserve",
-    "jsx": "react-jsx",
-    "types": ["jest", "@testing-library/jest-dom"], // ✅ ★追加
+    "jsx": "preserve",
+    "types": [
+      "jest",
+      "@testing-library/jest-dom"
+    ], // ✅ ★追加
     "incremental": true,
     "plugins": [
       {
@@ -20,7 +27,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
   "include": [
@@ -34,5 +43,7 @@
     "src/app/_app.bk",
     "jest.setup.ts" // ✅ ★追加（setupファイルがあるなら）
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
